<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/light"
    tools:context=".Submit">

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="41dp"
        android:layout_height="49dp"
        android:contentDescription="@string/logo"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="@+id/settingBtn"
        app:layout_constraintHorizontal_bias="0.02"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.029999971"
        app:srcCompat="@drawable/logo" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/settingBtn"
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.98"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.029999971"
        android:minHeight="48dp"
        android:contentDescription="@string/login_setting"
        app:backgroundTint="@android:color/transparent"
        app:tint="@color/black"
        app:srcCompat="@drawable/ic_setting"
        app:elevation="0dp" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.13">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@string/submit_description_username"
            app:srcCompat="@drawable/ic_username_black" />

        <EditText
            android:layout_width="0dip"
            android:layout_weight="1"
            android:importantForAutofill="no"
            android:textColor="@color/black"
            android:id="@+id/usernameSubmit"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/submit_username"
            android:inputType="text"
            android:minHeight="48dp"
            android:textColorHint="@color/black" />

        <ImageView
            android:id="@+id/errorUsername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone"
            app:srcCompat="@drawable/ic_error" />

        <ImageView
            android:id="@+id/checkUsername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="invisible"
            app:srcCompat="@drawable/ic_check" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.050000012">

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@string/submit_description_password"
            app:srcCompat="@drawable/ic_password_black" />

        <EditText
            android:textColor="@color/black"
            android:importantForAutofill="no"
            android:layout_width="0dip"
            android:layout_weight="1"
            android:id="@+id/passwordSubmit"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/submit_password"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:textColorHint="@color/black" />

        <ImageView
            android:id="@+id/errorPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone"
            app:srcCompat="@drawable/ic_error" />

        <ImageView
            android:id="@+id/checkPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="invisible"
            app:srcCompat="@drawable/ic_check" />
    </LinearLayout>

    <TextView
        android:id="@+id/text_error_password"
        android:layout_width="315dp"
        android:layout_height="35dp"
        android:text="@string/errorPassword"
        android:textColor="@color/red"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        app:layout_constraintVertical_bias="0.050000012">

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@string/submit_description_confirm_password"
            app:srcCompat="@drawable/ic_confirm_black" />

        <EditText
            android:importantForAutofill="no"
            android:layout_width="0dip"
            android:layout_weight="1"
            android:id="@+id/confirmSubmit"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/submit_confirm_password"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black" />

        <ImageView
            android:id="@+id/errorConfirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone"
            app:srcCompat="@drawable/ic_error" />

        <ImageView
            android:id="@+id/checkConfirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="invisible"
            app:srcCompat="@drawable/ic_check" />

    </LinearLayout>

    <TextView
        android:id="@+id/text_error_confirm"
        android:layout_width="311dp"
        android:layout_height="35dp"
        android:text="@string/errorPassword"
        android:textColor="@color/red"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout5" />

    <LinearLayout
        android:id="@+id/linearLayout6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout5"
        app:layout_constraintVertical_bias="0.050000012">

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@string/submit_description_display_name"
            app:srcCompat="@drawable/ic_display_name_black" />

        <EditText
            android:importantForAutofill="no"
            android:textColor="@color/black"
            android:id="@+id/displayNameSubmit"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/submit_display_name"
            android:inputType="text"
            android:minHeight="48dp"
            android:textColorHint="@color/black" />

        <ImageView
            android:id="@+id/errorDisplayName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone"
            app:srcCompat="@drawable/ic_error" />

        <ImageView
            android:id="@+id/checkDisplayName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="invisible"
            app:srcCompat="@drawable/ic_check" />

    </LinearLayout>

    <TextView
        android:id="@+id/text_error_display_name"
        android:layout_width="310dp"
        android:layout_height="30dp"
        android:text="@string/errorDisplayName"
        android:textColor="@color/red"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout6" />

    <LinearLayout
        android:id="@+id/linearLayout7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout6"
        app:layout_constraintVertical_bias="0.050000012">

        <ImageButton
            android:id="@+id/btnGallery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#00FFFFFF"
            android:contentDescription="@string/submit_add_photo"
            android:minHeight="48dp"
            android:paddingStart="20dp"
            android:paddingEnd="0dp"
            app:srcCompat="@drawable/ic_photo_black" />

        <TextView
            android:id="@+id/text_error_photo"
            android:layout_width="0dp"
            android:paddingTop="14dp"
            android:layout_height="match_parent"
            android:paddingLeft="8dp"
            android:layout_weight="1"
            android:ems="10"
            android:visibility="invisible"
            android:text="@string/errorPhoto"
            android:textColor="@color/red" />

        <ImageView
            android:id="@+id/errorPhoto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone"
            app:srcCompat="@drawable/ic_error" />

        <ImageView
            android:id="@+id/checkPhoto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="invisible"
            app:srcCompat="@drawable/ic_check" />

    </LinearLayout>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imgGallery"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:contentDescription="@string/gallery_image"
        app:layout_constraintBottom_toBottomOf="@id/registerBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout7"
        app:layout_constraintVertical_bias="0.25" />

    <Button
        android:id="@+id/registerBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#00FFFFFF"
        android:text="@string/submit_registerBtn"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgGallery"
        app:layout_constraintVertical_bias="0.20999998"
        app:strokeColor="@color/black"
        app:strokeWidth="3dp" />

    <LinearLayout
        android:id="@+id/linearLayout9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerBtn"
        app:layout_constraintVertical_bias="0.060000002">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit_already_registered"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/clickHereBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="4dp"
            android:paddingEnd="0dp"
            android:text="@string/login_click_here"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="4dp"
            android:paddingEnd="0dp"
            android:text="@string/submit_to_login"
            android:textColor="@color/black" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>